--- a/package.json
+++ b/package.json
@@ -10,19 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^10.0.3",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
+    "flowbite-react": "^0.12.16",
+    "lodash": "^4.17.21",
+    "lodash-move": "^1.1.1",
+    "lodash.clamp": "^4.0.3",
     "lucide-react": "^0.562.0",
+    "motion": "^12.26.1",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.1",
-    "rxjs": "^7.8.2",
-    "tailwindcss": "^4.1.18"
+    "react-redux": "^9.2.0",
+    "react-use-gesture": "^9.1.3",
+    "react-use-measure": "^2.1.7",
+    "redux-observable": "^3.0.0-rc.3",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/lodash.clamp": "^4.0.9",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -32,6 +44,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
